--- a/competitions.html
+++ b/competitions.html
@@ -69,9 +69,9 @@
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
-                    <th scope="col">Year</th>
-                    <th scope="col">City Name</th>
-                    <th scope="col">Country Name</th>
+                    <th scope="col">Photo</th>
+                    <th scope="col">Modality</th>
+                    <th scope="col">Results</th>
                     <th scope="col" class="text-right"></th>
                 </tr>
             </thead>
@@ -79,9 +79,11 @@
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Year"></td>
-                    <td class="align-middle" data-bind="text:CityName"></td>
-                    <td class="align-middle" data-bind="text:CountryName"></td>
+                    <td class="align-middle" data-bind="attr:{src: Photo}">
+                        <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>
+                    </td>
+                    <td class="align-middle" data-bind="text:Modality"></td>
+                    <td class="align-middle" align="center" data-bind="text:Results"></td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./competitionsDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
