--- a/countries.html
+++ b/countries.html
@@ -33,7 +33,7 @@
     <!-- Working Area -->
     <div class="container">
         <div class="border-bottom py-2 mb-2">
-            <h2>Olympic Games Countries List</h2>
+            <h2 data-bind="text:displayName"></h2>
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
@@ -67,6 +67,7 @@
         <table class="table table-striped table-sm small">
             <thead class="bg-dark text-light">
                 <tr>
+                    <th scope="col">Id</th>
                     <th scope="col">Country Name</th>
                     <th scope="col">IOC</th>
                     <th scope="col">Flag</th>
@@ -75,10 +76,12 @@
             </thead>
             <tbody data-bind="foreach: records">
                 <tr>
+                    <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
                     <td class="align-middle" data-bind="text:IOC"></td>
                     <td class="align-middle" data-bind="attr:{src: Flag}">
-            <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Flag }, text : Flag" target="_blank"></a></td>
+                        <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Flag }, text : Flag" target="_blank"></a>
+                    </td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./countriesDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
