--- a/countries.html
+++ b/countries.html
@@ -79,8 +79,8 @@
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
                     <td class="align-middle" data-bind="text:IOC"></td>
-                    <td class="align-middle" data-bind="attr:{src: Flag}">
-                        <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Flag }, text : Flag" target="_blank"></a>
+                    <td class="align-middle">
+                    <img class="img-thumbnail" data-bind="attr:{src: Flag}" style="height:40px;" />
                     </td>
                     <td class="text-end">
                         <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./countriesDetails.html?id=' + Id }">
