--- a/athletes.html
+++ b/athletes.html
@@ -80,8 +80,8 @@
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
                     <td class="align-middle" data-bind="text:Sex"></td>
-                    <td class="align-middle" data-bind="attr:{src: Photo}">
-                        <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>
+                    <td class="align-middle">
+                        <img class="img-thumbnail" data-bind="attr:{src: Photo}" style="height:100px;" />
                     </td>
                     <td class="align-middle" data-bind="text:BestPosition"></td>
                     <td class="text-end">
