--- a/competitions.html
+++ b/competitions.html
@@ -79,8 +79,8 @@
                 <tr>
                     <td class="align-middle" data-bind="text:Id"></td>
                     <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="attr:{src: Photo}">
-                        <i class="fa fa-image"></i> <a class="link-dark text-decoration-none" data-bind="attr: { href: Photo }, text : Photo" target="_blank"></a>
+                    <td class="align-middle">
+                        <img class="img-thumbnail" data-bind="attr:{src: Photo}" style="height:100px;" />
                     </td>
                     <td class="align-middle" data-bind="text:Modality"></td>
                     <td class="align-middle" align="center" data-bind="text:Results"></td>
