--- a/competitions.html
+++ b/competitions.html
@@ -26,14 +26,38 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html"><i class=" fa fa-flag-o text-danger"></i> Countries</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="games.html"><i class="fa fa-map-marker text-success"></i> Games</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="modalities.html"><i class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="statistics0.html"><i class="fa fa-bar-chart text-info"></i> Statistics</a></li>
+                </ul>
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item"><a href="favorites.html" class="nav-link"><i class="fa fa-heart-o text-danger"></i> Favorites</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Working Area -->
     <div class="container">
-        <div class="border-bottom py-2 mb-2">
-            <h2 data-bind="text:displayName"></h2>
+        <div class="row">
+            <div class="border-bottom">
+                <!-- ko if: records().length>0 -->
+                <h2 style="float: left" data-bind="html:displayName"></h2>
+                <!-- /ko -->
+                <!-- ko ifnot: records().length>0 -->
+                <h2 style="float: left"><b>No Results Found</b></h2>
+                <!-- /ko -->
+                <form class="form-check form-check-inline" id="forms1" style="float: right" role="search">
+                    <input id="searchbarall" class="form-control" type="search" placeholder="Search competition" aria-label="Search" style="
+            border-style: solid;
+            border-width: 1px;
+            background-color: rgb(255, 255, 255);
+            width: 400px;
+            float: left;
+            color: black;
+          " />
+                    <button class="btn" id="lupadef" type="submit" data-bind="click:pesquisa" style="float: right" tabindex="-1">
+                        <i class="fa fa-search" style="color: black"></i>
+                    </button>
+                </form>
+            </div>
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
@@ -88,8 +112,8 @@
                         <a class="btn btn-default btn-light btn-xs" data-bind="attr: { href:'./competitionsDetails.html?id=' + Id }">
                             <i class="fa fa-eye" title="Selecione para ver detalhes"></i>
                         </a>
-                        <button class="btn btn-default btn-xs">
-                            <i class="fa fa-heart-o" data-bind="attr : { 'id': 'favourite_' + Id }" title="Selecione para adicionar aos favoritos"></i>
+                        <button data-bind="click: () => $parent.toggleFavourite(Id), attr : { 'id': 'favourite_' + Id }" id="heartbt" class="btn btn-default btn-xs btn-favourite">
+                            <i data-bind="attr: {'class': $parent.favourites().includes(Id)? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                         </button>
                     </td>
                 </tr>
